<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/EditText01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/typeHere"
                android:lines="4" />

            <EditText
                android:id="@+id/EditText02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:labelFor="@+id/EditText02"
                android:text="@string/presetValue" />

            <AutoCompleteTextView
                android:id="@+id/AutoCompleteTextView01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionHint="Pick a color or type your own"
                android:completionThreshold="1"
                android:labelFor="@+id/AutoCompleteTextView01" />

            <MultiAutoCompleteTextView
                android:id="@+id/MultiAutoCompleteTextView01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionHint="Pick a color or type your own"
                android:completionThreshold="1"
                android:labelFor="@+id/MultiAutoCompleteTextView01" />

            <EditText
                android:id="@+id/input_filtered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/typeHere" />

            <Spinner
                android:id="@+id/Spinner01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/colors"
                android:prompt="@string/spin_prompt" />

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>